--- a/user/themes/mytheme/templates/partials/git_sync_link.html.twig
+++ b/user/themes/mytheme/templates/partials/git_sync_link.html.twig
@@ -35,8 +35,8 @@
         {% endif %}
       {% endif %}
       {% if not presentationslides %}
-        <a class="{{ link_classes }}" href="{{ git_repo_link_url }}" title="{{ git_repo_link_text }}" target="_blank">
-          <i class="fa fa-{{ git_repo_link_icon }}" aria-hidden="true"></i>{{ git_repo_link_text }}</a>
+        <span class="{{ 'inline-flex items-center' }}">{% if theme_var('git_sync_edit_note_text') %}{{ theme_var('git_sync_edit_note_text') }}&nbsp;{% endif %}<a class="{{ link_classes ~ ' ' ~ 'inline-flex items-center' }}" href="{{ git_repo_link_url }}" title="{{ git_repo_link_text }}" target="_blank">
+          {{ svg_icon('brands/' ~ git_repo_link_icon ~ '.svg', 'current-color h-5 w-5 pr-1' )|raw }}{{ git_repo_link_text }}</a></span>
       {% endif %}
     {% else %}
       {% if page.header.git_sync_repo_link %}
@@ -68,15 +68,15 @@
           {% endif %}
         {% endif %}
       {% endif %}
-      {% if presentationslides %}({% endif %}<a class="{{ link_classes }}" href="{{ git_repo_link_url }}" title="{{ git_repo_link_text }}" target="_blank"><i class="fa fa-{{ git_repo_link_icon }}" aria-hidden="true"></i> {{ git_repo_link_text }}</a>{% if presentationslides %}){% endif %}
+      {% if presentationslides %}({% endif %}<span class="{{ 'inline-flex items-center' }}">{% if theme_var('git_sync_edit_note_text') %}{{ theme_var('git_sync_edit_note_text') }}&nbsp;{% endif %}<a class="{{ link_classes ~ ' ' ~ 'inline-flex items-center' }}" href="{{ git_repo_link_url }}" title="{{ git_repo_link_text }}" target="_blank">{{ svg_icon('brands/' ~ git_repo_link_icon ~ '.svg', 'current-color h-5 w-5 pr-1' )|raw }}{{ git_repo_link_text }}</a></span>{% if presentationslides %}){% endif %}
     {% endif %}
   {% endif %}
 {% else %}
   {% if not (config.plugins['git-sync'].enabled) or (config.plugins['git-sync'].enabled and config.plugins['git-sync'].repository is empty) %}
     {% set admin_panel_appearance_url = grav.base_url ~ '/admin/plugins/git-sync' %}
     {% if not presentationslides %}
-      <a class="{{ link_classes }}" href="{{ admin_panel_appearance_url }}" title="Setup Git Sync">
-        <i class="fa fa-cog" aria-hidden="true"></i> Setup Git Sync</a>
+      <a class="{{ link_classes ~ ' ' ~ 'inline-flex items-center' }}" href="{{ admin_panel_appearance_url }}" title="Setup Git Sync">
+        {{ svg_icon('tabler/settings.svg', 'current-color h-5 w-5 pr-1')|raw }}Setup Git Sync</a>
     {% endif %}
   {% else %}
     {% if not (page.header.hide_git_sync_repo_link and not (presentationslides)) %}
@@ -120,8 +120,8 @@
           {% endif %}
         {% endif %}
         {% if not presentationslides %}
-          <a class="{{ link_classes }}" href="{{ git_sync_repo_link}}" title="{{ git_repo_link_text }}" target="_blank">
-            <i class="fa fa-{{ git_repo_link_icon }}" aria-hidden="true"></i> {{ git_repo_link_text }}</a>
+          <span class="{{ 'inline-flex items-center' }}">{% if theme_var('git_sync_edit_note_text') %}{{ theme_var('git_sync_edit_note_text') }}&nbsp;{% endif %}<a class="{{ link_classes ~ ' ' ~ 'inline-flex items-center' }}" href="{{ git_sync_repo_link}}" title="{{ git_repo_link_text }}" target="_blank">
+            {{ svg_icon('brands/' ~ git_repo_link_icon ~ '.svg', 'current-color h-5 w-5 pr-1' )|raw }}{{ git_repo_link_text }}</a></span>
         {% endif %}
       {% else %}
         {% if (page.children.count) and (not presentationslides) %}
@@ -146,7 +146,7 @@
             {% endif %}
           {% endif %}
         {% endif %}
-        {% if presentationslides %}({% endif %}<a class="{{ link_classes }}" href="{{ git_repo_link_url }}" title="{{ git_repo_link_text }}" target="_blank"><i class="fa fa-{{ git_repo_link_icon }}" aria-hidden="true"></i> {{ git_repo_link_text }}</a>{% if presentationslides %}){% endif %}
+        {% if presentationslides %}({% endif %}<span class="{{ 'inline-flex items-center' }}">{% if theme_var('git_sync_edit_note_text') %}{{ theme_var('git_sync_edit_note_text') }}&nbsp;{% endif %}<a class="{{ link_classes ~ ' ' ~ 'inline-flex items-center' }}" href="{{ git_repo_link_url }}" title="{{ git_repo_link_text }}" target="_blank">{{ svg_icon('brands/' ~ git_repo_link_icon ~ '.svg', 'current-color h-5 w-5 pr-1' )|raw }}{{ git_repo_link_text }}</a></span>{% if presentationslides %}){% endif %}
       {% endif %}
     {% endif %}
   {% endif %}
