--- a/user/themes/mytheme/templates/partials/git_sync_link.html.twig
+++ b/user/themes/mytheme/templates/partials/git_sync_link.html.twig
@@ -1,52 +1,39 @@
-{% if linkinmenu %}
-  {% set link_classes = "newwindow external-link nav-link" %}
-{% else %}
-  {% set link_classes = "newwindow external-link" %}
-{% endif %}
-
 {% if theme_var('git_sync_repo_link') %}
-  {% if not (page.header.hide_git_sync_repo_link and not (presentationslides)) %}
+  {% if not page.header.hide_git_sync_repo_link %}
     {% set git_repo_link_url = theme_var('git_sync_repo_link') %}
-    {% if theme_var('custom_git_sync_repo_link_icon') is empty %}
+    {% if theme_var('custom_git_sync_repo_link_icon')is empty %}
       {% if 'github' in git_repo_link_url %}
-        {% set git_repo_link_icon = "github" %}
+        {% set git_repo_link_icon = "brands/github.svg" %}
       {% elseif 'gitlab' in git_repo_link_url %}
-        {% set git_repo_link_icon = "gitlab" %}
+        {% set git_repo_link_icon = "brands/gitlab.svg" %}
       {% elseif 'bitbucket' in git_repo_link_url %}
-        {% set git_repo_link_icon = "bitbucket" %}
+        {% set git_repo_link_icon = "brands/bitbucket.svg" %}
       {% else %}
-        {% set git_repo_link_icon = "git" %}
+        {% set git_repo_link_icon = "brands/git.svg" %}
       {% endif %}
     {% else %}
       {% set git_repo_link_icon = theme_var('custom_git_sync_repo_link_icon') %}
     {% endif %}
-    {% if theme_var('type_of_git_sync_repo_link') == 'view' or theme_var('type_of_git_sync_repo_link') is empty %}
+    {% if theme_var('type_of_git_sync_repo_link') == 'view' or theme_var('type_of_git_sync_repo_link')is empty %}
       {% if page.header.git_sync_repo_link_text %}
         {% set git_repo_link_text = page.header.git_sync_repo_link_text %}
       {% else %}
-        {% if theme_var('custom_git_sync_repo_link_text') is empty %}
+        {% if theme_var('custom_git_sync_repo_link_text')is empty %}
           {% set git_repo_link_text = 'View Content Repository' %}
-        {% else %}
-          {% if not presentationslides %}
-            {% set git_repo_link_text = theme_var('custom_git_sync_repo_link_text') %}
-          {% else %}
-            {% set git_repo_link_text = theme_var('custom_git_sync_repo_presentation_link_text') %}
-          {% endif %}
         {% endif %}
       {% endif %}
-      {% if not presentationslides %}
-        <span class="{{ 'inline-flex items-center' }}">{% if theme_var('git_sync_edit_note_text') %}{{ theme_var('git_sync_edit_note_text') }}&nbsp;{% endif %}<a class="{{ link_classes ~ ' ' ~ 'inline-flex items-center' }}" href="{{ git_repo_link_url }}" title="{{ git_repo_link_text }}" target="_blank">
-          {{ svg_icon('brands/' ~ git_repo_link_icon ~ '.svg', 'current-color h-5 w-5 pr-1' )|raw }}{{ git_repo_link_text }}</a></span>
-      {% endif %}
+      <span class="inline-block align-middle">
+        {% if theme_var('git_sync_edit_note_text') %}{{ theme_var('git_sync_edit_note_text') }}{% endif %}
+        <a href="{{ git_repo_link_url }}" title="{{ git_repo_link_text }}" target="_blank">
+          {{ svg_icon(git_repo_link_icon, 'current-color h-6 w-6 pr-1' )|raw }}{{ git_repo_link_text }}</a>
+      </span>
     {% else %}
       {% if page.header.git_sync_repo_link %}
         {% set git_repo_link_url = page.header.git_sync_repo_link %}
-      {% elseif presentationpagepath %}
-        {% set git_repo_link_url = git_repo_link_url ~ presentationpagepath %}
       {% else %}
         {% set git_repo_link_url = git_repo_link_url ~ ('/' ~ page.filePathClean) | replace({'/user/': '/'}) %}
       {% endif %}
-      {% if (page.children.count) and (not presentationslides) %}
+      {% if (page.children.count) %}
         {% set git_repo_link_url = (git_repo_link_url | replace({
           ('/' ~ page.template ~ '.md'): '/'
         })) %}
@@ -54,77 +41,67 @@
       {% if page.header.git_sync_repo_link_text %}
         {% set git_repo_link_text = page.header.git_sync_repo_link_text %}
       {% else %}
-        {% if not presentationslides %}
-          {% if theme_var('custom_git_sync_repo_link_text') is empty %}
-            {% set git_repo_link_text = 'Edit this Page' %}
-          {% else %}
-            {% set git_repo_link_text = theme_var('custom_git_sync_repo_link_text') %}
-          {% endif %}
+        {% if theme_var('custom_git_sync_repo_link_text')is empty %}
+          {% set git_repo_link_text = 'Edit this Page' %}
         {% else %}
-          {% if theme_var('custom_git_sync_repo_presentation_link_text') is empty %}
-            {% set git_repo_link_text = 'Edit these Slides' %}
-          {% else %}
-            {% set git_repo_link_text = theme_var('custom_git_sync_repo_presentation_link_text') %}
-          {% endif %}
+          {% set git_repo_link_text = theme_var('custom_git_sync_repo_link_text') %}
         {% endif %}
       {% endif %}
-      {% if presentationslides %}({% endif %}<span class="{{ 'inline-flex items-center' }}">{% if theme_var('git_sync_edit_note_text') %}{{ theme_var('git_sync_edit_note_text') }}&nbsp;{% endif %}<a class="{{ link_classes ~ ' ' ~ 'inline-flex items-center' }}" href="{{ git_repo_link_url }}" title="{{ git_repo_link_text }}" target="_blank">{{ svg_icon('brands/' ~ git_repo_link_icon ~ '.svg', 'current-color h-5 w-5 pr-1' )|raw }}{{ git_repo_link_text }}</a></span>{% if presentationslides %}){% endif %}
+      <span class="inline-block align-middle">
+        {% if theme_var('git_sync_edit_note_text') %}{{ theme_var('git_sync_edit_note_text') }}{% endif %}
+        <a href="{{ git_repo_link_url }}" title="{{ git_repo_link_text }}" target="_blank">{{ svg_icon(git_repo_link_icon, 'current-color h-6 w-6 pr-1' )|raw }}{{ git_repo_link_text }}</a>
+      </span>
     {% endif %}
   {% endif %}
 {% else %}
   {% if not (config.plugins['git-sync'].enabled) or (config.plugins['git-sync'].enabled and config.plugins['git-sync'].repository is empty) %}
     {% set admin_panel_appearance_url = grav.base_url ~ '/admin/plugins/git-sync' %}
-    {% if not presentationslides %}
-      <a class="{{ link_classes ~ ' ' ~ 'inline-flex items-center' }}" href="{{ admin_panel_appearance_url }}" title="Setup Git Sync">
-        {{ svg_icon('tabler/settings.svg', 'current-color h-5 w-5 pr-1')|raw }}Setup Git Sync</a>
-    {% endif %}
+    <span class="inline-block align-middle">
+      <a href="{{ admin_panel_appearance_url }}" title="Setup Git Sync">
+        {{ svg_icon('tabler/settings.svg', 'current-color h-6 w-6')|raw }}Setup Git Sync</a>
+    </span>
   {% else %}
-    {% if not (page.header.hide_git_sync_repo_link and not (presentationslides)) %}
+    {% if not(page.header.hide_git_sync_repo_link) %}
       {% set git_sync_repo = config.plugins['git-sync'].repository %}
       {% set git_sync_repo_link = (git_sync_repo | replace({'.git': '/'})) %}
       {% if 'github' in git_sync_repo_link %}
-        {% set git_repo_link_icon = "github" %}
+        {% set git_repo_link_icon = "brands/github.svg" %}
         {% set git_repo_link_url = (git_sync_repo | replace({'.git': '/'})) ~ 'blob/master' | replace({'user/': '/'}) %}
       {% elseif 'gitlab' in git_sync_repo_link %}
-        {% set git_repo_link_icon = "gitlab" %}
+        {% set git_repo_link_icon = "brands/gitlab.svg" %}
         {% set git_repo_link_url = (git_sync_repo | replace({'.git': '/'})) ~ 'blob/master' | replace({'user/': '/'}) %}
       {% elseif 'bitbucket' in git_sync_repo_link %}
-        {% set git_repo_link_icon = "bitbucket" %}
+        {% set git_repo_link_icon = "brands/bitbucket.svg" %}
         {% set git_repo_link_url = (git_sync_repo | replace({'.git': '/'})) ~ 'src/master' | replace({'user/': '/'}) %}
       {% else %}
-        {% set git_repo_link_icon = "git" %}
+        {% set git_repo_link_icon = "brands/git.svg" %}
         {% set git_repo_link_url = (git_sync_repo | replace({'.git': '/'})) ~ 'blob/master' | replace({'user/': '/'}) %}
       {% endif %}
       {% if page.header.git_sync_repo_link %}
         {% set git_repo_link_url = page.header.git_sync_repo_link %}
-      {% elseif presentationpagepath %}
-        {% set git_repo_link_url = git_repo_link_url ~ presentationpagepath %}
       {% else %}
         {% set git_repo_link_url = git_repo_link_url ~ ('/' ~ page.filePathClean) | replace({'/user/': '/'}) %}
       {% endif %}
-      {% if theme_var('custom_git_sync_repo_link_icon') is not empty %}
+      {% if theme_var('custom_git_sync_repo_link_icon')is not empty %}
         {% set git_repo_link_icon = theme_var('custom_git_sync_repo_link_icon') %}
       {% endif %}
-      {% if theme_var('type_of_git_sync_repo_link') == 'view' or theme_var('type_of_git_sync_repo_link') is empty %}
+      {% if theme_var('type_of_git_sync_repo_link') == 'view' or theme_var('type_of_git_sync_repo_link')is empty %}
         {% if page.header.git_sync_repo_link_text %}
           {% set git_repo_link_text = page.header.git_sync_repo_link_text %}
         {% else %}
-          {% if theme_var('git_sync_repo_link_text') is empty %}
+          {% if theme_var('git_sync_repo_link_text')is empty %}
             {% set git_repo_link_text = 'View Content Repository' %}
           {% else %}
-            {% if not presentationslides %}
-              {% set git_repo_link_text = theme_var('custom_git_sync_repo_link_text') %}
-            {% else %}
-              {% set git_repo_link_text = theme_var('custom_git_sync_repo_presentation_link_text') %}
-            {% endif %}
+            {% set git_repo_link_text = theme_var('custom_git_sync_repo_link_text') %}
           {% endif %}
         {% endif %}
-        {% if not presentationslides %}
-          <span class="{{ 'inline-flex items-center' }}">{% if theme_var('git_sync_edit_note_text') %}{{ theme_var('git_sync_edit_note_text') }}&nbsp;{% endif %}<a class="{{ link_classes ~ ' ' ~ 'inline-flex items-center' }}" href="{{ git_sync_repo_link}}" title="{{ git_repo_link_text }}" target="_blank">
-            {{ svg_icon('brands/' ~ git_repo_link_icon ~ '.svg', 'current-color h-5 w-5 pr-1' )|raw }}{{ git_repo_link_text }}</a></span>
-        {% endif %}
+        <span class="inline-block align-middle">
+          {% if theme_var('git_sync_edit_note_text') %}{{ theme_var('git_sync_edit_note_text') }}{% endif %}
+          <a href="{{ git_sync_repo_link}}" title="{{ git_repo_link_text }}" target="_blank">
+            {{ svg_icon(git_repo_link_icon, 'current-color h-6 w-6 pr-1' )|raw }}{{ git_repo_link_text }}</a>
+        </span>
       {% else %}
-        {% if (page.children.count) and (not presentationslides) %}
+        {% if (page.children.count) %}
           {% set git_repo_link_url = (git_repo_link_url | replace({
             ('/' ~ page.template ~ '.md'): '/'
           })) %}
@@ -132,21 +109,16 @@
         {% if page.header.git_sync_repo_link_text %}
           {% set git_repo_link_text = page.header.git_sync_repo_link_text %}
         {% else %}
-          {% if not presentationslides %}
-            {% if theme_var('custom_git_sync_repo_link_text') is empty %}
-              {% set git_repo_link_text = 'Edit this Page' %}
-            {% else %}
-              {% set git_repo_link_text = theme_var('custom_git_sync_repo_link_text') %}
-            {% endif %}
+          {% if theme_var('custom_git_sync_repo_link_text')is empty %}
+            {% set git_repo_link_text = 'Edit this Page' %}
           {% else %}
-            {% if theme_var('custom_git_sync_repo_presentation_link_text') is empty %}
-              {% set git_repo_link_text = 'Edit these Slides' %}
-            {% else %}
-              {% set git_repo_link_text = theme_var('custom_git_sync_repo_presentation_link_text') %}
-            {% endif %}
+            {% set git_repo_link_text = theme_var('custom_git_sync_repo_link_text') %}
           {% endif %}
         {% endif %}
-        {% if presentationslides %}({% endif %}<span class="{{ 'inline-flex items-center' }}">{% if theme_var('git_sync_edit_note_text') %}{{ theme_var('git_sync_edit_note_text') }}&nbsp;{% endif %}<a class="{{ link_classes ~ ' ' ~ 'inline-flex items-center' }}" href="{{ git_repo_link_url }}" title="{{ git_repo_link_text }}" target="_blank">{{ svg_icon('brands/' ~ git_repo_link_icon ~ '.svg', 'current-color h-5 w-5 pr-1' )|raw }}{{ git_repo_link_text }}</a></span>{% if presentationslides %}){% endif %}
+        <span class="inline-block align-middle">
+          {% if theme_var('git_sync_edit_note_text') %}{{ theme_var('git_sync_edit_note_text') }}{% endif %}
+          <a href="{{ git_repo_link_url }}" title="{{ git_repo_link_text }}" target="_blank">{{ svg_icon(git_repo_link_icon, 'current-color h-6 w-6 pr-1' )|raw }}{{ git_repo_link_text }}</a>
+        </span>
       {% endif %}
     {% endif %}
   {% endif %}
